--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "domelementtype": "^2.3.0",
     "domhandler": "^5.0.3",
     "domutils": "^3.1.0",
+    "dotenv": "^16.4.5",
     "entities": "^4.5.0",
     "follow-redirects": "^1.15.6",
     "form-data": "^4.0.0",
@@ -24,6 +25,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "nth-check": "^2.1.1",
+    "openai": "^4.49.1",
     "parse5": "^7.1.2",
     "parse5-htmlparser2-tree-adapter": "^7.0.0",
     "proxy-from-env": "^1.1.0"
