--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "domutils": "^3.1.0",
     "dotenv": "^16.4.5",
     "entities": "^4.5.0",
+    "express": "^4.19.2",
     "follow-redirects": "^1.15.6",
     "form-data": "^4.0.0",
     "htmlparser2": "^8.0.2",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "mysql2": "^3.10.0",
     "nth-check": "^2.1.1",
     "openai": "^4.49.1",
     "parse5": "^7.1.2",
