--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "asynckit": "^0.4.0",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "boolbase": "^1.0.0",
     "cheerio": "^1.0.0-rc.12",
     "cheerio-select": "^2.1.0",
