--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "mysql2": "^3.10.0",
+    "nodemon": "^3.1.3",
     "nth-check": "^2.1.1",
     "openai": "^4.49.1",
     "parse5": "^7.1.2",
@@ -36,6 +37,7 @@
     "proxy-from-env": "^1.1.0"
   },
   "scripts": {
+    "start": "./node_modules/.bin/nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
